# color-picker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  main.js  package.json
.github/workflows/: build.yml
ci/: bump-version.js  run-sentry-cli-azure.ps1  win-build.cmd
dependencies/: color_picker.node.txt
res/: color_picker_cursor.cur  resource.rc
source/: color-picker-win.cpp  color-picker-win.h  util-win.cpp  util-win.h
tests/: test.js
